--- a/src/app/components/profile/profile.component.scss
+++ b/src/app/components/profile/profile.component.scss
@@ -37,6 +37,7 @@
             background: #F5F5F5 0% 0% no-repeat padding-box;
             border: 1px solid #E2E2E2;
             border-radius: 2px;
+            padding-left: 10px;
         }
 
 }
@@ -49,6 +50,20 @@
     flex-direction: column;
     gap: 10px;
     margin: 60px auto;
+
+    button{
+        background-color: greenyellow;
+        width: 70px;
+        height: 30px;
+        border: none;
+        border-radius: 10px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-left: 40%;
+        margin-top: 4%;
+        cursor: pointer;
+    }
 
 }
 .profile-main-address-Details-header{
@@ -97,6 +112,7 @@
             background: #F5F5F5 0% 0% no-repeat padding-box;
             border: 1px solid #DCDCDC;
             border-radius: 2px;
+            padding-left: 10px;
     }
 }
 
