cart api integrated

--- a/src/app/components/book-cart/book-cart.component.html
+++ b/src/app/components/book-cart/book-cart.component.html
@@ -1,12 +1,11 @@
 
-<app-header></app-header>
 
 
 <div class="cart">
 
   <div class="cart1">
     <div class="cart-head">
-     <strong class="title"> My Cart(1)</strong>
+     <strong class="title">My Cart({{ cartItems.length }})</strong>
      <div class="select-main">
       <img src="../../../assets/icons/location.png" width="35px" alt="">
        
@@ -185,6 +184,3 @@
 
 <br><br>
 <br><br>
-<div class="footer">
-<h3 style="   font-size: 10px;">Copyright &copy 2020 Bookstore Private Limited. All Rights Reserved</h3>
-</div>
