forget pass UI added

--- a/src/app/components/forgot-password/forgot-password.component.html
+++ b/src/app/components/forgot-password/forgot-password.component.html
@@ -1,1 +1,40 @@
-<p>forgot-password works!</p>
+
+<div class="header-cnt">
+    <div class="allign-cnt">
+      <div class="img-cnt">
+        <img src="../../../assets/logo/logo.png" alt="" />
+        <span>Bookstore</span>
+      </div>
+    </div>
+  </div>
+  
+
+
+<div class="full-cnt">
+    <div class="form-heading">
+        <h1 class="title">Forgot Your Password?</h1>
+    </div>
+
+    <div class="wrapper">
+        <form action="" [formGroup]="loginForm">
+        <div class="space">
+            <div class="text-cnt">
+                <p>Enter your email address and we will send you a link to reset your password</p>
+            </div>
+            <br>
+            <div class="email">
+               <p>Email</p>
+            </div>
+            <div class="email-input">
+                <input type="text">
+            </div>
+            <div class="res-btn">
+                <button mat-button color="primary">Reset Password</button>
+            </div>
+    </div>
+    <div class="create-btn">
+        <button mat-button color="primary">Create Account</button>
+    </div>
+</form>
+</div>
+</div>
