--- a/src/app/components/book-cart/book-cart.component.scss
+++ b/src/app/components/book-cart/book-cart.component.scss
@@ -5,12 +5,19 @@
    
  }
  .cart-body{
-    
-    
+    margin: 10px;
+   
     justify-content: left;
     gap: 12px;
     
    
+ }
+
+ .order-summary{
+  margin-top: 5%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
  }
 
  .product{
@@ -102,6 +109,9 @@
    margin-bottom: 0%;
    border-radius:3px ;
  }
+ .txt{
+ word-wrap: break-word;
+ }
 
  .cart3{
     border: 2px solid rgba(176, 174, 174, 0.338);
@@ -109,6 +119,8 @@
    margin: 5%;
    margin-top: 2%;
  
+  flex-wrap: wrap;
+  gap: 10px;
    border-radius:3px ;
    margin-bottom: 10%;
  }
@@ -162,6 +174,7 @@ flex-direction: row;
 .item-details{
   display: flex;
   flex-direction: column;
+
 }
  .radio{
     width: 100%;
