--- a/src/app/components/profile/profile.component.scss
+++ b/src/app/components/profile/profile.component.scss
@@ -2,6 +2,9 @@
     display: flex;
     flex-direction: column;
     margin-top: 50px;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
     
 }
 
@@ -43,7 +46,27 @@
 }
 
 // ******
+.profile-main-customerAdd{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+    
+}
+.profile-main-customerAdd-span{
+    // border: 1px solid black;
+    display: flex;
+    flex-direction: column;
+    // gap: 10px;
+    // margin: 20px auto;
+    
+    padding: 12px;
+    width: 50%;
+    
+    
 
+}
 
 .profile-main-address-Details{
     display: flex;
@@ -120,4 +143,26 @@
     display: flex;
     gap: 50px;
     align-items: center;
+}
+
+.profile-main-customerAdd-header{
+    display: flex;
+    justify-content: space-between;
+    width: 50%;
+    
+    
+}
+
+.profile-main-customerAdd-header-sub{
+    width: 123px;
+            height: 29px;
+            align-content: center;
+            padding-left: 20px;
+            background: #FFFFFF 0% 0% no-repeat padding-box;
+            border: 1px solid #A03037;
+            border-radius: 2px;
+            font: normal normal normal 12px/16px Roboto;
+                letter-spacing: 0px;
+                color: #A03037;
+
 }
