add changes to it

--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -32,65 +32,70 @@
         </div>
         <div class="profile-main-customerAdd-span" *ngFor="let addressData of customerDetails">
     
-            <div style="display: flex; justify-content: space-between;">
-                <h2>{{addressData.addressType}}</h2>
-                <p style="color: #A03037;cursor: pointer;">Edit</p>
+            <div  *ngIf="showFirstDiv">
+                <div style="display: flex; justify-content: space-between;">
+                    <h2 style="margin: 0;">{{addressData.addressType}}</h2>
+                    <p style="color: #A03037;cursor: pointer;" (click)="toggleDivs()">Edit</p>
+                </div>
+                <h3 style="margin: 0;">Address</h3>
+               <span>{{addressData.fullAddress}} , {{addressData.city}}, {{addressData.state}} </span>
             </div>
-            <h3>Address</h3>
-           <span>{{addressData.fullAddress}} , {{addressData.city}}, {{addressData.state}} </span>
            
            
        </div>
     </div>
 
-    <div class="profile-main-address-Details">
-        <div class="profile-main-address-Details-header">
-            <h1>Address Details</h1>
-            <div class="profile-main-address-Details-header-sub">Add New Address</div>
-        </div>
-        <div class="profile-main-address-Details-Subheader">
-            <h2>1. Work</h2>
-            <p style="color: #A03037; cursor: pointer;" (click)="CDenableEditing()" >Edit</p>
-        </div>
-        <div class="profile-main-address-Details-main">
-            <p >Address</p>
-            <input type="text" placeholder="Plot no.13, Bhallar township, nagpur" [disabled]="CDisDisabled" [(ngModel)]="customerAddress">
-        </div>
-        <div class="profile-main-address-Details-sub">
-            <div class="profile-main-address-Details-sub2">
-                <p>City/town</p>
-                <input type="text" placeholder="Nagpur" [disabled]="CDisDisabled" [(ngModel)]="customerCity">
+    <!-- <ng-template #else_part> -->
+        <div class="profile-main-address-Details" *ngIf="!showFirstDiv" >
+            <div class="profile-main-address-Details-header">
+                <!-- <h1>Address Details</h1> -->
+                <!-- <div class="profile-main-address-Details-header-sub">Add New Address</div> -->
             </div>
-            <div class="profile-main-address-Details-sub2">
-                <p>State</p>
-                <input type="text" placeholder="Maharashtra" [disabled]="CDisDisabled" [(ngModel)]="customerState">
+            <div class="profile-main-address-Details-Subheader">
+                <h2>1. Work</h2>
+                <!-- <p style="color: #A03037; cursor: pointer;" (click)="CDenableEditing()" >Edit</p> -->
             </div>
-
-        </div>
-        <div class="profile-main-address-Details-worktype">
-            <p>Type</p>
-           <div class="profile-main-address-Details-worktype-radio">
-           <div>
-            <input type="radio" id="home" name="location" value="Home" [(ngModel)]="customerAddType">
-            <label for="home">Home</label>
-           </div>
-            
-          <div>  
-            <input type="radio" id="work" name="location" value="Office" [(ngModel)]="customerAddType">
-            <label for="work">Work</label>
-          </div>
-            
-            <div>
-                <input type="radio" id="other" name="location" value="Other" [(ngModel)]="customerAddType">
-            <label for="other">Other</label>
+            <div class="profile-main-address-Details-main">
+                <p >Address</p>
+                <input type="text" placeholder="Plot no.13, Bhallar township, nagpur" [disabled]="CDisDisabled" [(ngModel)]="customerAddress">
             </div>
-           </div>
+            <div class="profile-main-address-Details-sub">
+                <div class="profile-main-address-Details-sub2">
+                    <p>City/town</p>
+                    <input type="text" placeholder="Nagpur" [disabled]="CDisDisabled" [(ngModel)]="customerCity">
+                </div>
+                <div class="profile-main-address-Details-sub2">
+                    <p>State</p>
+                    <input type="text" placeholder="Maharashtra" [disabled]="CDisDisabled" [(ngModel)]="customerState">
+                </div>
+    
+            </div>
+            <div class="profile-main-address-Details-worktype">
+                <p>Type</p>
+               <div class="profile-main-address-Details-worktype-radio">
+               <div>
+                <input type="radio" id="home" name="location" value="Home" [(ngModel)]="customerAddType">
+                <label for="home">Home</label>
+               </div>
+                
+              <div>  
+                <input type="radio" id="work" name="location" value="Office" [(ngModel)]="customerAddType">
+                <label for="work">Work</label>
+              </div>
+                
+                <div>
+                    <input type="radio" id="other" name="location" value="Other" [(ngModel)]="customerAddType">
+                <label for="other">Other</label>
+                </div>
+               </div>
+            </div>
+    
+            <!-- <button *ngIf="!CDisDisabled" (click)="saveAddress()">Save</button> -->
+            <button (click)="toggleDivs()">Save</button>
+    
+    
         </div>
-
-        <button *ngIf="!CDisDisabled" (click)="saveAddress()">Save</button>
-
-
-    </div>
+    <!-- </ng-template> -->
 
 
 </div>
