--- a/src/app/components/profile/profile.component.scss
+++ b/src/app/components/profile/profile.component.scss
@@ -47,6 +47,7 @@
 
 // ******
 .profile-main-customerAdd{
+    width: 80%;
     display: flex;
     flex-direction: column;
     justify-content: center;
