--- a/src/app/components/wish-list/wish-list.component.html
+++ b/src/app/components/wish-list/wish-list.component.html
@@ -21,7 +21,7 @@
               
             </div>
         </div>
-        <img src="../../../assets/icons/delete.png" alt="" height="20px" width="20px" (click)="handleDeleteIcon(wishData._id)" style="cursor: pointer;">
+        <img src="../../../assets/icons/delete.png" alt="" height="20px" width="20px" (click)="handleDeleteIcon(wishData.product_id._id)" style="cursor: pointer;">
     </div>
 </div>
 
