--- a/src/app/components/book-cart/book-cart.component.scss
+++ b/src/app/components/book-cart/book-cart.component.scss
@@ -118,7 +118,7 @@
    padding: 3%;
    margin: 5%;
    margin-top: 2%;
- 
+   display: flex;
   flex-wrap: wrap;
   gap: 10px;
    border-radius:3px ;
