functinalies in profile done

--- a/src/app/components/book-cart/book-cart.component.html
+++ b/src/app/components/book-cart/book-cart.component.html
@@ -168,7 +168,7 @@
     <div class="cart-footer2">
        
  
-      <button  class="Order" (click)="showCart2()">Checkout</button>
+      <button  class="Order" (click)="orderPlaced()">Checkout</button>
     </div>
    </div>
   
