--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -28,14 +28,14 @@
     <div class="profile-main-customerAdd">
         <div class="profile-main-customerAdd-header">
             <h1>Address Details</h1>
-            <div class="profile-main-customerAdd-header-sub">Add New Address</div>
+            <div class="profile-main-customerAdd-header-sub" (click)="add_new_add()">Add New Address</div>
         </div>
         <div class="profile-main-customerAdd-span" *ngFor="let addressData of customerDetails">
     
-            <div  *ngIf="showFirstDiv">
+            <div *ngIf="showFirstDiv" >
                 <div style="display: flex; justify-content: space-between;">
                     <h2 style="margin: 0;">{{addressData.addressType}}</h2>
-                    <p style="color: #A03037;cursor: pointer;" (click)="toggleDivs()">Edit</p>
+                    <p style="color: #A03037;cursor: pointer;" (click)="toggleDivs(addressData.addressType)">Edit</p>
                 </div>
                 <h3 style="margin: 0;">Address</h3>
                <span>{{addressData.fullAddress}} , {{addressData.city}}, {{addressData.state}} </span>
@@ -52,21 +52,21 @@
                 <!-- <div class="profile-main-address-Details-header-sub">Add New Address</div> -->
             </div>
             <div class="profile-main-address-Details-Subheader">
-                <h2>1. Work</h2>
+                <h2>1. {{customerAddType}}</h2>
                 <!-- <p style="color: #A03037; cursor: pointer;" (click)="CDenableEditing()" >Edit</p> -->
             </div>
             <div class="profile-main-address-Details-main">
                 <p >Address</p>
-                <input type="text" placeholder="Plot no.13, Bhallar township, nagpur" [disabled]="CDisDisabled" [(ngModel)]="customerAddress">
+                <input type="text" placeholder="Full Address" [disabled]="CDisDisabled" [(ngModel)]="customerAddress">
             </div>
             <div class="profile-main-address-Details-sub">
                 <div class="profile-main-address-Details-sub2">
                     <p>City/town</p>
-                    <input type="text" placeholder="Nagpur" [disabled]="CDisDisabled" [(ngModel)]="customerCity">
+                    <input type="text" placeholder="City" [disabled]="CDisDisabled" [(ngModel)]="customerCity">
                 </div>
                 <div class="profile-main-address-Details-sub2">
                     <p>State</p>
-                    <input type="text" placeholder="Maharashtra" [disabled]="CDisDisabled" [(ngModel)]="customerState">
+                    <input type="text" placeholder="State" [disabled]="CDisDisabled" [(ngModel)]="customerState">
                 </div>
     
             </div>
@@ -91,7 +91,7 @@
             </div>
     
             <!-- <button *ngIf="!CDisDisabled" (click)="saveAddress()">Save</button> -->
-            <button (click)="toggleDivs()">Save</button>
+            <button (click)="saveAddress()">Save</button>
     
     
         </div>
