--- a/src/app/components/profile/profile.component.scss
+++ b/src/app/components/profile/profile.component.scss
@@ -52,7 +52,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: 20px;
+    margin-top: 50px;
+    gap: 20px;
     
 }
 .profile-main-customerAdd-span{
@@ -73,18 +74,19 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
-    margin: 60px auto;
+    margin: 10px auto;
 
     button{
-        background-color: greenyellow;
+        background-color: #3371B5;
         width: 70px;
         height: 30px;
+        color: white;
         border: none;
         border-radius: 10px;
         display: flex;
         justify-content: center;
         align-items: center;
-        margin-left: 40%;
+        margin-left: 85%;
         margin-top: 4%;
         cursor: pointer;
     }
@@ -148,8 +150,10 @@
 
 .profile-main-customerAdd-header{
     display: flex;
-    justify-content: space-between;
     width: 50%;
+    justify-content: space-between;
+    align-items: center;
+    
     
     
 }
@@ -157,6 +161,7 @@
 .profile-main-customerAdd-header-sub{
     width: 123px;
             height: 29px;
+            cursor: pointer;
             align-content: center;
             padding-left: 20px;
             background: #FFFFFF 0% 0% no-repeat padding-box;
@@ -165,5 +170,7 @@
             font: normal normal normal 12px/16px Roboto;
                 letter-spacing: 0px;
                 color: #A03037;
+
+         
 
 }
