Made all UI changes 1

--- a/src/app/components/book-cart/book-cart.component.html
+++ b/src/app/components/book-cart/book-cart.component.html
@@ -138,7 +138,7 @@
 
   <div class="cart3" *ngIf="isCart3Visible" >
     <strong>Order Summary</strong>
-
+<br><br>
     <div class="order-summary" >
     <div class="cart-head">
      
@@ -148,7 +148,7 @@
  
      <br>
     
-     <div class="cart-body" *ngFor="let item of cartItems">
+     <div class="cart-body2" *ngFor="let item of cartItems">
       
        <img class="img" width="80px" src="../../../assets/book-images/Image 11.png" alt="">
        <div class="item-details">
@@ -168,7 +168,7 @@
     <div class="cart-footer2">
        
  
-      <button  class="Order" (click)="showCart2()">Checkout</button>
+      <button  class="Order" (click)="showCart4()">Checkout</button>
     </div>
    </div>
   
