--- a/src/app/components/order-placed/order-placed.component.html
+++ b/src/app/components/order-placed/order-placed.component.html
@@ -27,7 +27,7 @@
     </div>
     <div class="btn">
 
-        <button class="Order">
+        <button (click)="continueShopping()" class="Order">
             Continue Shopping
         </button>
     </div>
