--- a/src/app/components/book-cart/book-cart.component.scss
+++ b/src/app/components/book-cart/book-cart.component.scss
@@ -6,27 +6,45 @@
  }
  .cart-body{
     margin: 10px;
-   
+  //  display: flex;
+  //  align-items: center;
+  //  flex-wrap: wrap;
     justify-content: left;
     gap: 12px;
     
    
  }
 
+ .cart-body2{
+  margin: 10px;
+//  display: flex;
+//  align-items: center;
+//  flex-wrap: wrap;
+  justify-content: left;
+ width: 100px;
+ height: 250px;
+  
+ 
+}
+
  .order-summary{
-  margin-top: 5%;
   display: flex;
-  flex-direction: row;
-  justify-content: space-around;
+  flex-wrap: wrap;
+
+  gap: 10px;
+  justify-content: flex-start;
+
  }
 
  .product{
   margin-bottom: 5%;
   display: flex;
+  align-items: flex-start;
+
   flex-direction: row;
  }
  .img{
-    margin-right: 3%;
+    margin-right: 7%;
  }
  .btns{
     display: flex;
@@ -109,9 +127,23 @@
    margin-bottom: 0%;
    border-radius:3px ;
  }
- .txt{
- word-wrap: break-word;
+ .txt{ width: 100%; /* Adjust the width as needed */
+  word-wrap: break-word; /* Ensures long words break and wrap to the next line */
+  white-space: normal; 
+  
  }
+
+ h3.txt {
+  white-space: normal;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+@media (max-width: 576px) {
+  .order-summary {
+    flex-direction: column;
+    align-items: center;
+  }}
 
  .cart3{
     border: 2px solid rgba(176, 174, 174, 0.338);
@@ -173,6 +205,7 @@ flex-direction: row;
  }
 .item-details{
   display: flex;
+  flex: 1;
   flex-direction: column;
 
 }
@@ -361,3 +394,5 @@ flex-direction: row;
  
 
   }
+
+  
