admin button added

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -35,6 +35,7 @@
             <button class="login" (click)="handleHeaderMenuClick('login')">
               Login/SignUp
             </button>
+            <button class="loginAsAdmin" (click)="handleHeaderMenuClick('admin-login')">Login As Admin</button>
             <hr />
             <div
               class="mat-menu-btns"
@@ -59,7 +60,7 @@
               class="header-mat-menu-inner-cnt"
               style="display: flex; flex-direction: column; padding: 0px 20px"
             >
-              <p style="font-weight: bold">Hello XYZ,</p>
+              <p style="font-weight: bold">Hello {{name}},</p>
               <button
                 class="menu-button-item"
                 (click)="handleHeaderMenuClick('profile')"
