--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -109,7 +109,7 @@ mat-icon {
     height: 25px;
 }
 
-button.login {
+button.login, .loginAsAdmin {
     border: 1px solid #A03037;
     width: 100%;
     height: 25px;
