--- a/src/app/components/book-cart/book-cart.component.scss
+++ b/src/app/components/book-cart/book-cart.component.scss
@@ -6,45 +6,29 @@
  }
  .cart-body{
     margin: 10px;
-  //  display: flex;
-  //  align-items: center;
-  //  flex-wrap: wrap;
+   
     justify-content: left;
     gap: 12px;
     
    
  }
 
- .cart-body2{
-  margin: 10px;
-//  display: flex;
-//  align-items: center;
-//  flex-wrap: wrap;
-  justify-content: left;
- width: 100px;
- height: 250px;
-  
- 
-}
-
  .order-summary{
+  margin-top: 5%;
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: row;
 
-  gap: 10px;
-  justify-content: flex-start;
-
+  justify-content: space-around;
  }
 
  .product{
+  align-items: center;
   margin-bottom: 5%;
   display: flex;
-  align-items: flex-start;
-
   flex-direction: row;
  }
  .img{
-    margin-right: 7%;
+    margin-right: 3%;
  }
  .btns{
     display: flex;
@@ -127,30 +111,16 @@
    margin-bottom: 0%;
    border-radius:3px ;
  }
- .txt{ width: 100%; /* Adjust the width as needed */
-  word-wrap: break-word; /* Ensures long words break and wrap to the next line */
-  white-space: normal; 
-  
+ .txt{
+ word-wrap: break-word;
  }
-
- h3.txt {
-  white-space: normal;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-
-@media (max-width: 576px) {
-  .order-summary {
-    flex-direction: column;
-    align-items: center;
-  }}
 
  .cart3{
     border: 2px solid rgba(176, 174, 174, 0.338);
    padding: 3%;
    margin: 5%;
    margin-top: 2%;
- 
+   display: flex;
   flex-wrap: wrap;
   gap: 10px;
    border-radius:3px ;
@@ -205,7 +175,6 @@ flex-direction: row;
  }
 .item-details{
   display: flex;
-  flex: 1;
   flex-direction: column;
 
 }
@@ -394,5 +363,3 @@ flex-direction: row;
  
 
   }
-
-  
