--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -25,7 +25,7 @@
           <div
             class="header-mat-menu-inner-cnt"
             *ngIf="
-              isLoggedin == false && currentRoute != 'admin';
+              isLoggedin == false && currentRoute != 'admin' && currentState == 'loggedOut';
               else elsePart
             "
             style="padding: 0px 20px"
@@ -56,7 +56,7 @@
             </div>
           </div>
           <ng-template #elsePart >
-            <div *ngIf="currentRoute != 'admin'; else admin"
+            <div *ngIf="currentRoute != 'admin' || currentState == 'loggedIn'; else admin"
               class="header-mat-menu-inner-cnt"
               style="display: flex; flex-direction: column; padding: 0px 20px"
             >
@@ -86,7 +86,7 @@
           </ng-template>
           <ng-template #admin>
             <div
-              class="header-mat-menu-inner-cnt"
+              class="header-mat-menu-inner-cnt" *ngIf="currentState == 'admin'"
               style="display: flex; flex-direction: column; padding: 0px 20px;width: 150px; justify-content: center;"
             >
             <h2>Hi Admin!</h2>
