--- a/src/app/components/login-signup/login-signup.component.scss
+++ b/src/app/components/login-signup/login-signup.component.scss
@@ -4,7 +4,8 @@
   // align-items: center;
 
   // width:100%;
-  height: 100%;    
+  height: 100%;   
+   
 }
 
 
@@ -23,6 +24,7 @@
   flex-direction: column;
   align-items: center;
   margin-top: 3px;
+  // overflow: hidden;
 }
 
 .login-form{
