Made the Quantity of cart Work

--- a/src/app/components/book-cart/book-cart.component.html
+++ b/src/app/components/book-cart/book-cart.component.html
@@ -1,6 +1,3 @@
-
-
-
 <div class="cart">
 
   <div class="cart1">
@@ -32,9 +29,9 @@
          
         <div class="quantity">
           <div class="btns">
-          <button (click)="onDecrement()" class="btn">-</button>
-          <input  readonly class="input" type="text" value="{{item.product_id.quantity}}" >
-          <button (click)="onIncrement()" class="btn">+</button>
+          <button (click)="handleUpdateCartBtn('decreament',item._id)" class="btn">-</button>
+          <input  readonly class="input" type="text" value="{{item.quantityToBuy}}" >
+          <button (click)="handleUpdateCartBtn('increament',item._id)" class="btn">+</button>
         </div>
         <strong (click)="removeCartItem(item._id)">Remove</strong>
           </div>
@@ -70,45 +67,7 @@
 
     <br>
     <div class="cart-body">
-     <form action="post">
-
-      <div class="name">
-        <input  class="form" type="text" placeholder="Full-Name" name="" id="">
-        <input  class="form"  type="text " placeholder="Mobile Number" name="" id="">
-      </div>
-     
-      <input  class="form2"  type="text " placeholder="Address" name="" id="">
-     
-      <div class="city">
-        <input  class="form"  placeholder="City" type="text" name="" id="">
-        <input   class="form" placeholder="State" type="text" name="" id="">
-      </div>
-
-      <br>
-      <div class="type">
-        <h3>Type</h3>
-        
-        <div class="radio">
-          <div class="option1">
-            <input style="color: rgb(107, 1, 1);" type="radio" name="opt" id="">
-            <h4>Home</h4>
-          </div>
-          <div class="option2">
-            <input type="radio" name="opt" id="">
-            <h4>Work</h4>
-          </div>
-<div class="option3">
-            <input type="radio" name="opt" id="">
-            <h4>Other</h4>
-          </div>
-
-          
-        </div>
-      </div>
-      
-     </form>
-
-   
+    
 
 
   
@@ -138,7 +97,7 @@
 
   <div class="cart3" *ngIf="isCart3Visible" >
     <strong>Order Summary</strong>
-<br><br>
+
     <div class="order-summary" >
     <div class="cart-head">
      
@@ -168,7 +127,7 @@
     <div class="cart-footer2">
        
  
-      <button  class="Order" (click)="showCart4()">Checkout</button>
+      <button  class="Order" (click)="orderPlaced()">Checkout</button>
     </div>
    </div>
   
