--- a/src/app/components/book-cart/book-cart.component.scss
+++ b/src/app/components/book-cart/book-cart.component.scss
@@ -1,365 +1,376 @@
- .cart-head{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-   
- }
- .cart-body{
-    margin: 10px;
-   
-    justify-content: left;
-    gap: 12px;
-    
-   
- }
-
- .order-summary{
-  margin-top: 5%;
+.cart-head{
   display: flex;
   flex-direction: row;
-
-  justify-content: space-around;
- }
-
- .product{
-  align-items: center;
-  margin-bottom: 5%;
-  display: flex;
-  flex-direction: row;
- }
- .img{
-    margin-right: 3%;
- }
- .btns{
-    display: flex;
-    flex-direction: row;
-    gap: 10px;
-    justify-content: flex-start;
-    align-items: center;
- }
- .btn{
-    padding: 2%;
-    height: 25px;
-    width: 25px;
-    align-items: center;
-    border-radius: 50%;
-    border: none;
- }
- .input{
-    width: 30px;
-    border: 1px solid gray; 
-    border-radius: 5px;
- }
-
- .quantity{
-    display: flex;
-  margin-top: 5%;
-    padding: 1%;
-    gap: 15px;
-    align-items: center;
-
- }
- .cart-footer{
-    margin-left:2%;
-    display: flex;
-    flex-direction: row;
-    justify-content: end;
-    margin-right: 2%;
-   
- }
-  .cart-footer2{
-    margin-left:2%;
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-   
- }
- .cart{
-    width: 80%;
-    margin-left: 10%;  
-   
- }
-
- .cart1{
-   border: 2px solid rgba(176, 174, 174, 0.338);
-   padding: 3%;
+  justify-content: space-between;
  
-   margin-bottom: 2%;
-   border-radius:3px ;
- }
+}
+.cart-body{
+  margin: 10px;
+ 
+  justify-content: left;
+  gap: 12px;
+  
+ 
+}
+
+
+.cart-body2{
+  margin: 10px;
+ width: 125px;
+ height: 300px;
+  justify-content: left;
+  gap: 12px;
+  
+ 
+}
+
+.order-summary{
+margin-top: 5%;
+display: flex;
+flex-direction: row;
+flex-wrap: wrap;
+
+}
+
+.product{
+align-items: center;
+margin-bottom: 5%;
+display: flex;
+flex-direction: row;
+}
+.img{
+  margin-right: 3%;
+}
+.btns{
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+  justify-content: flex-start;
+  align-items: center;
+}
+.btn{
+  padding: 2%;
+  height: 25px;
+  width: 25px;
+  align-items: center;
+  border-radius: 50%;
+  border: none;
+}
+.input{
+  width: 30px;
+  border: 1px solid gray; 
+  border-radius: 5px;
+}
+
+.quantity{
+  display: flex;
+margin-top: 5%;
+  padding: 1%;
+  gap: 15px;
+  align-items: center;
+
+}
+.cart-footer{
+  margin-left:2%;
+  display: flex;
+  flex-direction: row;
+  justify-content: end;
+  margin-right: 2%;
+ 
+}
+.cart-footer2{
+  margin-left:2%;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+ 
+}
+.cart{
+  width: 80%;
+  margin-left: 10%;  
+ 
+}
+
+.cart1{
+ border: 2px solid rgba(176, 174, 174, 0.338);
+ padding: 3%;
+
+ margin-bottom: 2%;
+ border-radius:3px ;
+}
 .card2{
-    border: 2px solid rgba(176, 174, 174, 0.338);
-    padding: 3%;
-    margin: 5%;
-    // margin-left: 10%;
-    // margin-right: 10%;
+  border: 2px solid rgba(176, 174, 174, 0.338);
+  padding: 3%;
+  margin: 5%;
+  // margin-left: 10%;
+  // margin-right: 10%;
 
 }
 .card3{
-    border: 2px solid rgba(176, 174, 174, 0.338);
-    padding: 3%;
-    margin: 5%;
-    // margin-left: 10%;
-    // margin-right: 10%;
+  border: 2px solid rgba(176, 174, 174, 0.338);
+  padding: 3%;
+  margin: 5%;
+  // margin-left: 10%;
+  // margin-right: 10%;
 }
 
- .cart2{
-    border: 2px solid rgba(176, 174, 174, 0.338);
-   padding: 3%;
-   margin: 5%;
-   margin-top: 2%;
-   margin-bottom: 0%;
-   border-radius:3px ;
- }
- .txt{
- word-wrap: break-word;
- }
+.cart2{
+  border: 2px solid rgba(176, 174, 174, 0.338);
+ padding: 3%;
+ margin: 5%;
+ margin-top: 2%;
+ margin-bottom: 0%;
+ border-radius:3px ;
+}
+.txt{
+word-wrap: break-word;
+}
 
- .cart3{
-    border: 2px solid rgba(176, 174, 174, 0.338);
-   padding: 3%;
-   margin: 5%;
-   margin-top: 2%;
-   display: flex;
-  flex-wrap: wrap;
-  gap: 10px;
-   border-radius:3px ;
-   margin-bottom: 10%;
- }
- .select-main{
-    display: flex;
- }
+.cart3{
+  border: 2px solid rgba(176, 174, 174, 0.338);
+ padding: 3%;
+ margin: 5%;
+ margin-top: 2%;
+ display: flex;
+flex-wrap: wrap;
+gap: 10px;
+ border-radius:3px ;
+ margin-bottom: 10%;
+}
+.select-main{
+  display: flex;
+}
 
 
- .select{
-    padding: 10px 15px;
-    padding-right: 55px;
- }
- .Order,.Order2{
-    background-color: #2d7bcf ;
-    border-radius: 2px;
-    opacity: 1;
-    border: none;
-    padding: 10px 20px;
-    color: white;
+.select{
+  padding: 10px 15px;
+  padding-right: 55px;
+}
+.Order,.Order2{
+  background-color: #2d7bcf ;
+  border-radius: 2px;
+  opacity: 1;
+  border: none;
+  padding: 10px 20px;
+  color: white;
 
- }
- .form{
-    padding: 10px 35px;
-    margin: 1%;
-    border: 2px solid rgba(176, 174, 174, 0.338);
- }
- .form2{
-    padding: 10px 35px;
-    margin: 1%;
-    width: 86%;
-    height: 20%;
-    border: 2px solid rgba(176, 174, 174, 0.338);
- }
+}
+.form{
+  padding: 10px 35px;
+  margin: 1%;
+  border: 2px solid rgba(176, 174, 174, 0.338);
+}
+.form2{
+  padding: 10px 35px;
+  margin: 1%;
+  width: 86%;
+  height: 20%;
+  border: 2px solid rgba(176, 174, 174, 0.338);
+}
 .option1,.option2,.option3{
 display: flex;
 align-items: flex-start;
 flex-direction: row;
 }
 .option4{
-    display: flex;
-    align-items: flex-start;
-    flex-direction: row-reverse;
-   
-}
- .name,.city{
-    display: flex;
-    flex-direction: row;
-   
-    
- }
-.item-details{
   display: flex;
-  flex-direction: column;
+  align-items: flex-start;
+  flex-direction: row-reverse;
+ 
+}
+.name,.city{
+  display: flex;
+  flex-direction: row;
+ 
+  
+}
+.item-details{
+display: flex;
+flex-direction: column;
 
 }
- .radio{
-    width: 100%;
-  margin-bottom: 2%;
-    display: flex;
-    justify-content: space-between;
-    flex-direction: row;
- }
- .Order,.Order2:hover{
-    background-color: #36b403 ;
-    border-radius: 2px;
-    opacity: 1;
-    border: none;
-    padding: 10px 20px;
-    color: white;
-    transition: 1s;
-    animation-fill-mode: forwards;
-    cursor: pointer;
+.radio{
+  width: 100%;
+margin-bottom: 2%;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+}
+.Order,.Order2:hover{
+  background-color: #36b403 ;
+  border-radius: 2px;
+  opacity: 1;
+  border: none;
+  padding: 10px 20px;
+  color: white;
+  transition: 1s;
+  animation-fill-mode: forwards;
+  cursor: pointer;
 
- }
+}
 
- .Add-new-address{
-    padding: 10px 35px;
-    border: 2px solid #a03037c9;
-    opacity: 1;
-    border-radius: 2px;
- }
+.Add-new-address{
+  padding: 10px 35px;
+  border: 2px solid #a03037c9;
+  opacity: 1;
+  border-radius: 2px;
+}
 
- @media (max-width: 767px) {
-    .cart {
-      width: 90%;
-    }
-  
-    .cart1,
-    .cart2,
-    .cart3 {
-      margin: 5%;
-    }
-    .option4{
-       justify-content: center;
-    }
-
-    
-  
-    .cart-head,
-    .cart-body,
-    .cart-footer,
-    .cart-footer2 {
-      flex-direction: column;
-      align-items: center;
-    }
-  .title,.title2{
-    margin-bottom: 10%;
+@media (max-width: 767px) {
+  .cart {
+    width: 90%;
   }
-    .quantity {
-      margin-left: 0;
 
+  .cart1,
+  .cart2,
+  .cart3 {
+    margin: 5%;
+  }
+  .option4{
+     justify-content: center;
+  }
+
+  
+
+  .cart-head,
+  .cart-body,
+  .cart-footer,
+  .cart-footer2 {
+    flex-direction: column;
+    align-items: center;
+  }
+.title,.title2{
+  margin-bottom: 10%;
+}
+  .quantity {
+    margin-left: 0;
+
+    text-align: center;
+    justify-content: center;
+  }
+  .item-details{
       text-align: center;
-      justify-content: center;
-    }
-    .item-details{
-        text-align: center;
-      
-    }
-  
-    .btn {
-      padding: 5%;
-      height: 35px;
-      width: 35px;
-    }
-  
-    .input {
-      width: 50px;
-    }
-  
-    .form,
-    .form2 {
-      width: 100%;
-      padding: 10px;
-    }
-  
-    .select {
-      width: 100%;
-      padding: 10px;
-    }
+    
   }
 
-  .Order{
-  
-    margin-top: 10%;
-    margin-bottom: 5%;
-    background-color: #2d7bcf ;
+  .btn {
+    padding: 5%;
+    height: 35px;
+    width: 35px;
   }
 
-
-  
-  .Order:hover{
-  
-    margin-top: 10%;
-    margin-bottom: 5%;
-    background-color: #00a619 ;
-  }
-  .Order{
-    align-self: center;
-    margin-top: 10%;
-    margin-bottom: 5%;
+  .input {
+    width: 50px;
   }
 
+  .form,
+  .form2 {
+    width: 100%;
+    padding: 10px;
+  }
 
-  /* For tablets and larger screens */
+  .select {
+    width: 100%;
+    padding: 10px;
+  }
+}
+
+.Order{
+
+  margin-top: 10%;
+  margin-bottom: 5%;
+  background-color: #2d7bcf ;
+}
+
+
+
+.Order:hover{
+
+  margin-top: 10%;
+  margin-bottom: 5%;
+  background-color: #00a619 ;
+}
+.Order{
+  align-self: center;
+  margin-top: 10%;
+  margin-bottom: 5%;
+}
+
+
+/* For tablets and larger screens */
 @media (min-width: 768px) {
-    .cart {
-      width: 70%;
-    }
-  
-    .cart1, .cart2, .cart3 {
-      margin: 5%;
-    }
+  .cart {
+    width: 70%;
+  }
 
-    .form{
-        width: 85%;
-    }
-    .form2{
-        width: 82%;
-    }
-  
-    .cart-head, .cart-body, .cart-footer, .cart-footer2 {
-      flex-direction: row;
-    }
-  
-   
+  .cart1, .cart2, .cart3 {
+    margin: 5%;
   }
-  
-  /* For mobile screens */
-  @media (max-width: 767px) {
-    .cart {
-      width: 90%;
-    }
-  
-    .cart1, .cart2, .cart3 {
-      margin: 5%;
-    }
-  
-    .cart-head, .cart-body, .cart-footer, .cart-footer2 {
-      flex-direction: column;
-      align-items: center;
-    }
-  
-    .quantity {
-      margin-left: 0;
-      justify-content: center;
-      flex-direction: column;
-    }
-  
-    .btn {
-      padding: 5%;
-      height: 35px;
-      width: 35px;
-    }
-  
-    .input {
-      width: 50px;
-    }
-  
-    .form, .form2 {
-      width: 91%;
-      padding: 10px;
-    }
-  
-    .select {
-      width: 100%;
-      padding: 10px;
-    }
+
+  .form{
+      width: 85%;
   }
-  
-  .footer{
-     
-    background-color:#2E1D1E ;
-    width: 89%;
-    height: 5%;
-    padding: 1%;
-    color: rgb(204, 204, 204);
-    padding-left: 10%;
+  .form2{
+      width: 82%;
+  }
+
+  .cart-head, .cart-body, .cart-footer, .cart-footer2 {
+    flex-direction: row;
+  }
+
  
+}
 
+/* For mobile screens */
+@media (max-width: 767px) {
+  .cart {
+    width: 90%;
   }
+
+  .cart1, .cart2, .cart3 {
+    margin: 5%;
+  }
+
+  .cart-head, .cart-body, .cart-footer, .cart-footer2 {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .quantity {
+    margin-left: 0;
+    justify-content: center;
+    flex-direction: column;
+  }
+
+  .btn {
+    padding: 5%;
+    height: 35px;
+    width: 35px;
+  }
+
+  .input {
+    width: 50px;
+  }
+
+  .form, .form2 {
+    width: 91%;
+    padding: 10px;
+  }
+
+  .select {
+    width: 100%;
+    padding: 10px;
+  }
+}
+
+.footer{
+   
+  background-color:#2E1D1E ;
+  width: 89%;
+  height: 5%;
+  padding: 1%;
+  color: rgb(204, 204, 204);
+  padding-left: 10%;
+
+
+}
