--- a/src/app/components/book-cart/book-cart.component.html
+++ b/src/app/components/book-cart/book-cart.component.html
@@ -60,14 +60,82 @@
     <div class="cart-head">
      <strong class="title2">Customer Details</strong>
      <div class="select-main">
-     <h5 class="Add-new-address">Add New Address</h5>
+    
      </div>
      
     </div>
 
     <br>
     <div class="cart-body">
+      <div class="profile-main-customerAdd">
+        <div class="profile-main-customerAdd-header">
+            <h1>Address Details</h1>
+            <div class="profile-main-customerAdd-header-sub" (click)="add_new_add()">Add New Address</div>
+        </div>
+        <div class="profile-main-customerAdd-span" *ngFor="let addressData of customerDetails">
     
+            <div *ngIf="shouldShowFirstDiv(addressData)" >
+                <div style="display: flex; justify-content: space-between;">
+                    <h2 style="margin: 0;">{{addressData.addressType}}</h2>
+                    <p style="color: #A03037;cursor: pointer;" (click)="toggleDivs(addressData)">Edit</p>
+                </div>
+                <h3 style="margin: 0;">Address</h3>
+               <span>{{addressData.fullAddress}} , {{addressData.city}}, {{addressData.state}} </span>
+            </div>
+
+            <div class="profile-main-address-Details" *ngIf="!shouldShowFirstDiv(addressData)" >
+                <div class="profile-main-address-Details-header">
+                    <!-- <h1>Address Details</h1> -->
+                    <!-- <div class="profile-main-address-Details-header-sub">Add New Address</div> -->
+                </div>
+                <div class="profile-main-address-Details-Subheader">
+                    <h2>1. {{customerAddType}}</h2>
+                    <!-- <p style="color: #A03037; cursor: pointer;" (click)="CDenableEditing()" >Edit</p> -->
+                </div>
+                <div class="profile-main-address-Details-main">
+                    <p >Address</p>
+                    <input type="text" placeholder="Full Address" [disabled]="CDisDisabled" [(ngModel)]="customerAddress">
+                </div>
+                <div class="profile-main-address-Details-sub">
+                    <div class="profile-main-address-Details-sub2">
+                        <p>City/town</p>
+                        <input type="text" placeholder="City" [disabled]="CDisDisabled" [(ngModel)]="customerCity">
+                    </div>
+                    <div class="profile-main-address-Details-sub2">
+                        <p>State</p>
+                        <input type="text" placeholder="State" [disabled]="CDisDisabled" [(ngModel)]="customerState">
+                    </div>
+        
+                </div>
+                <div class="profile-main-address-Details-worktype">
+                    <p>Type</p>
+                   <div class="profile-main-address-Details-worktype-radio">
+                   <div>
+                    <input type="radio" id="home" name="location" value="Home" [(ngModel)]="customerAddType">
+                    <label for="home">Home</label>
+                   </div>
+                    
+                  <div>  
+                    <input type="radio" id="work" name="location" value="Office" [(ngModel)]="customerAddType">
+                    <label for="work">Work</label>
+                  </div>
+                    
+                    <div>
+                        <input type="radio" id="other" name="location" value="Other" [(ngModel)]="customerAddType">
+                    <label for="other">Other</label>
+                    </div>
+                   </div>
+                </div>
+        
+                <!-- <button *ngIf="!CDisDisabled" (click)="saveAddress()">Save</button> -->
+                <button (click)="saveAddress()">Save</button>
+        
+        
+            </div>
+           
+           
+       </div>
+    </div>
 
 
   
