--- a/src/app/components/book-cart/book-cart.component.scss
+++ b/src/app/components/book-cart/book-cart.component.scss
@@ -374,3 +374,180 @@ margin-bottom: 2%;
 
 
 }
+
+.profile-main-ctn{
+  display: flex;
+  flex-direction: column;
+  margin-top: 50px;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  
+}
+
+.profile-main-personalDetails{
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  margin: 0 auto;
+
+}
+
+.profile-main-personalDetails-heading{
+  display: flex;
+  gap: 10px;
+  align-items: center;
+  
+  .edit{
+      color: #A03037;
+      cursor: pointer;
+  }
+}
+
+.profile-main-personalDetails-subctn{
+  display: flex;
+  flex-direction: column;
+  p{
+      margin: 0px;
+  }
+
+  input {
+          width: 511px;
+          height: 40px;
+          background: #F5F5F5 0% 0% no-repeat padding-box;
+          border: 1px solid #E2E2E2;
+          border-radius: 2px;
+          padding-left: 10px;
+      }
+
+}
+
+// ******
+.profile-main-customerAdd{
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 50px;
+  gap: 20px;
+  
+}
+.profile-main-customerAdd-span{
+  // border: 1px solid black;
+  display: flex;
+  flex-direction: column;
+  // gap: 10px;
+  // margin: 20px auto;
+  
+  padding: 12px;
+  width: 50%;
+  
+  
+
+}
+
+.profile-main-address-Details{
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  margin: 10px auto;
+
+  button{
+      background-color: #3371B5;
+      width: 70px;
+      height: 30px;
+      color: white;
+      border: none;
+      border-radius: 10px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin-left: 85%;
+      margin-top: 4%;
+      cursor: pointer;
+  }
+
+}
+.profile-main-address-Details-header{
+  display: flex;
+  justify-content: space-between;
+  
+      .profile-main-address-Details-header-sub {
+          width: 123px;
+          height: 29px;
+          align-content: center;
+          padding-left: 20px;
+          background: #FFFFFF 0% 0% no-repeat padding-box;
+          border: 1px solid #A03037;
+          border-radius: 2px;
+          font: normal normal normal 12px/16px Roboto;
+              letter-spacing: 0px;
+              color: #A03037;
+  }
+}
+
+.profile-main-address-Details-Subheader{
+  display: flex;
+  align-items: center;
+  gap: 20px;
+
+}
+
+.profile-main-address-Details-main{
+  input{
+      width: 512px;
+      height: 62px;
+      /* UI Properties */
+      background: #F5F5F5 0% 0% no-repeat padding-box;
+      border: 1px solid #DCDCDC;
+      border-radius: 2px;
+  }
+
+}
+
+.profile-main-address-Details-sub{
+  display: flex;
+  justify-content: space-between;
+  input{
+         width: 241px;
+          height: 45px;
+          background: #F5F5F5 0% 0% no-repeat padding-box;
+          border: 1px solid #DCDCDC;
+          border-radius: 2px;
+          padding-left: 10px;
+  }
+}
+
+.profile-main-address-Details-worktype-radio{
+  display: flex;
+  gap: 50px;
+  align-items: center;
+}
+
+.profile-main-customerAdd-header{
+  display: flex;
+  width: 50%;
+  justify-content: space-between;
+  align-items: center;
+  
+  
+  
+}
+
+.profile-main-customerAdd-header-sub{
+  width: 123px;
+          height: 29px;
+          cursor: pointer;
+          align-content: center;
+          padding-left: 20px;
+          background: #FFFFFF 0% 0% no-repeat padding-box;
+          border: 1px solid #A03037;
+          border-radius: 2px;
+          font: normal normal normal 12px/16px Roboto;
+              letter-spacing: 0px;
+              color: #A03037;
+
+       
+
+}
