--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -84,9 +84,9 @@
               </button>
             </div>
           </ng-template>
-          <ng-template #admin>
+          <ng-template #admin > 
             <div
-              class="header-mat-menu-inner-cnt" *ngIf="currentState == 'admin'"
+              class="header-mat-menu-inner-cnt"
               style="display: flex; flex-direction: column; padding: 0px 20px;width: 150px; justify-content: center;"
             >
             <h2>Hi Admin!</h2>
