--- a/src/app/components/profile/profile.component.scss
+++ b/src/app/components/profile/profile.component.scss
@@ -150,6 +150,7 @@
 
 .profile-main-customerAdd-header{
     display: flex;
+    gap: 30px;
     width: 50%;
     justify-content: space-between;
     align-items: center;
